--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -11,10 +11,9 @@
     <div class="header">
         <img th:src="@{images/logo.svg}" src="../../static/images/logo.svg" alt="logo" class="logo">
 
-        <form class="search-form">
-            <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt="magnifier"
-                 class="magnifier">
-            <input name="query" placeholder="Search" type="search">
+        <form class="search-form" th:action="@{/allRecipes}">
+            <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
+            <input name="startWith" placeholder="Search" type="search">
         </form>
 
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
