--- a/src/main/resources/templates/user/allRecipes.html
+++ b/src/main/resources/templates/user/allRecipes.html
@@ -9,7 +9,7 @@
     <div class="header">
         <img th:src="@{images/logo.svg}" src="../../static/images/logo.svg" alt = "logo" class = "logo">
 
-        <form class="search-form">
+        <form class="search-form" th:action="@{/allRecipes}">
             <img th:src="@{images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
             <input name="startWith" placeholder="Search" type="search">
         </form>
