--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -194,7 +194,7 @@ body {
     margin-bottom: 0.3vh;
     margin-top: 0.3vh;
 }
-.Dessert, .Main-Dish, .First-Dish, .Salad, .Sauce, .Drink{
+.Dessert, .Main-Dish, .First-Dish, .Salad, .Sauce, .Drink, .Snack{
     position: absolute;
     width: 6vw;
     height: 4vh;
