--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -13,8 +13,9 @@
         <img th:src="@{../images/logo.svg}" src="../../images/logo.svg" alt="logo" class="logo">
 
         <form class="search-form">
-            <img th:src="@{../images/magnifier.svg}" src="../../static/images/magnifier.svg" alt = "magnifier" class = "magnifier">
-                <input name="startWith" placeholder="Search" type="search">
+            <img th:src="@{../images/magnifier.svg}" src="../../static/images/magnifier.svg" alt="magnifier"
+                 class="magnifier">
+            <input name="startWith" placeholder="Search" type="search">
         </form>
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
         <a class="button-style" href="recipe.html" th:href="@{/recipe/{id1}(id1=${randomRecipeId})}">Random</a>
@@ -52,7 +53,8 @@
                      onmouseover="changeImage('user-img2', '../../images/user-login-hover.svg')"
                      onmouseout="restoreImage('user-img2', '../../images/user-login.svg')">
 
-                    <img id="user-img2" th:src="@{../images/user-login.svg}" src="../../images/user-login.svg" alt="user"
+                    <img id="user-img2" th:src="@{../images/user-login.svg}" src="../../images/user-login.svg"
+                         alt="user"
                          class="user">
                 </div>
             </button>
@@ -107,7 +109,9 @@
         </div>
     </div>
     <div th:if="${isLogin} == false">
-        <button class="UserList" id="user-list-logout" onclick="showAlert('Please, log in to add recipe to the custom list.')">Lists</button>
+        <button class="UserList" id="user-list-logout"
+                onclick="showAlert('Please, log in to add recipe to the custom list.')">Lists
+        </button>
     </div>
 
 
@@ -171,7 +175,8 @@
     <form class="text-form" th:action="@{/api/newComment/{id1}(id1=${id})}"
           method="post" th:object="${comment}" onsubmit="return validateInput('commentInput')">
         <img th:src="@{../images/quill.svg}" src="../../static/images/quill.svg" alt="quill" class="quill">
-        <textarea name="startWith" maxlength="255" th:field="${comment.text}" placeholder="Add comment" id="commentInput"></textarea>
+        <textarea name="startWith" maxlength="255" th:field="${comment.text}" placeholder="Add comment"
+                  id="commentInput"></textarea>
         <button type="submit" id="publish">Publish</button>
     </form>
     <div class="commentField">
@@ -296,6 +301,7 @@
     function showAlert(message) {
         alert(message);
     }
+
     /*$(".Report").click(function(){
         Swal.fire('Register to report',);
     });*/
