--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -66,7 +66,7 @@
 
     <div class="list-container" id="list-field-popup-window">
         <div class="list-name">
-            <form th:action="@{/api/newList}" method="post"
+            <form th:action="@{/api/newList/0}" th:object="${newList}"  method="post"
                   onsubmit="return validateInput('listName')">
                 <input type="text" placeholder="Enter list name" id="listName">
             </form>
