--- a/src/main/resources/static/css/recipe.css
+++ b/src/main/resources/static/css/recipe.css
@@ -214,17 +214,46 @@ body {
 }
 
 /*____________________________________________________________________________________________________________________*/
-.IngredientTagsField{
+.IngredientTagsField {
     position: absolute;
     width: 46.875vw;
     height: 11.1vh;
     top: 26.5vh;
     left: 2.0834vw;
-    background-color:  #F2E3B3;
+    background-color: #F2E3B3;
     border-radius: 5vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    padding: 1vh;
+    box-sizing: border-box;
 }
+
+.ingredientContent {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5vh;
+}
+
+.ingredientContent div {
+    flex: 1 1 auto;
+}
+
+.ingredientContent a {
+    display: block;
+    text-decoration: none;
+    padding: 0.2vh;
+    margin: 0.1vh;
+    border-radius: 0.5vh;
+    white-space: nowrap;
+    box-sizing: border-box;
+}
+
+.IngredientTagsField::-webkit-scrollbar {
+    display: none;
+}
+
 .IngredientTagsTitle{
-    position: absolute;
+    position: fixed;
     width: 11.98vw;
     height: 4.82vh;
     border-radius: 5vh;
