rewrote board on main page

--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -75,7 +75,63 @@
     <div class="menu">
         <img alt="board" class="board" th:src="@{images/CuttingBoard.svg}" src="../../static/images/CuttingBoard.svg" >
         <h1 class="boardOneTitle">Categories</h1>
-        <div class="ul">
+        <div class="ulBoard">
+            <div class="item">
+                <a th:href="@{/allRecipes(category=)}">
+                    <img alt="First-Dish" class="First-Dish" th:src="@{images/First dish.svg}" src="../../static/images/First dish.svg">
+                    First dishes
+                </a>
+            </div><hr>
+            <div class="item">
+                <a th:href="@{/allRecipes(category=)}">
+                    <img alt="Main-Dish" class="Main-Dish" th:src="@{images/Main dish.svg}" src="../../static/images/Main dish.svg" >
+                    Main dishes
+                </a>
+            </div><hr>
+            <div class="item">
+                <a th:href="@{/allRecipes(category=)}">
+                    <img alt="Salad" class="Salad" th:src="@{images/Salad.svg}" src="../../static/images/Salad.svg" >
+                    Salads
+                </a>
+            </div><hr>
+            <div class="item">
+                <a th:href="@{/allRecipes(category=)}">
+                    <img alt="Pastry" class="Pastry" th:src="@{images/Pastry.svg}" src="../../static/images/Pastry.svg" >
+                    Pastry
+                </a>
+            </div><hr>
+            <div class="item">
+                <a th:href="@{/allRecipes(category=)}">
+                    <img alt="Dessert" class="Dessert" th:src="@{images/Dessert.svg}" src="../../static/images/Dessert.svg" >
+                    Desserts
+                </a>
+            </div><hr>
+            <div class="item">
+                <a th:href="@{/allRecipes(category=)}">
+                    <img alt="Drink" class="Drink" th:src="@{images/Drink.svg}" src="../../static/images/Drink.svg" >
+                    Drinks
+                </a>
+            </div><hr>
+            <div class="item">
+                <a th:href="@{/allRecipes(category=)}">
+                    <img alt="Fish-Dish" class="Fish-Dish" th:src="@{images/Fish dish.svg}" src="../../static/images/Fish dish.svg" >
+                    Fish dishes
+                </a>
+            </div><hr>
+            <div class="item">
+                <a th:href="@{/allRecipes(category=)}">
+                    <img alt="Snack" class="Snack" th:src="@{images/Snack.svg}" src="../../static/images/Snack.svg" >
+                    Snacks
+                </a>
+            </div><hr>
+            <div class="item">
+                <a th:href="@{/allRecipes(category=)}">
+                    <img alt="Sauce" class="Sauce" th:src="@{images/Sauce.svg}" src="../../static/images/Sauce.svg" >
+                    Sauces
+                </a>
+            </div><hr>
+        </div>
+        <!--<div class="ul">
             <ul>
                 <a th:href="@{/allRecipes(category=)}">
                 <li><img alt="First-Dish" class="First-Dish" th:src="@{images/First dish.svg}" src="../../static/images/First dish.svg" >
@@ -107,7 +163,7 @@
                     Sauces</li>
                 <hr>
             </ul>
-        </div>
+        </div>-->
         <img alt="coffeeBean" class="bean" th:src="@{images/coffeeBean.svg}" src="../../static/images/coffeeBean.svg" >
     </div>
 
@@ -144,7 +200,7 @@
     <div class="mainD">
         <img alt="mainDish" class="mainDish" th:src="@{images/mainD.jpg}" src="../../static/images/Main dishes.jpg">
         <div class="rectangleMD rectangleMD-left">
-            <img alt="Main-Dish" class="MainDish" th:src="@{images/Main dish.svg}" src="../../static/images/Main dish.svg" >Main dishes
+            <img alt="Main-Dish" class="Main-Dish" th:src="@{images/Main dish.svg}" src="../../static/images/Main dish.svg" >Main dishes
         </div>
     </div>
 
