--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -129,7 +129,7 @@ body {
 }
 
 .menu {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -142,7 +142,6 @@ body {
 .h1 {
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 2.1875vw; /*42*/
-    font-size: 3.8889vh;
     color: #733506;
     position: absolute;
     left: 1.979167vw;
@@ -167,7 +166,6 @@ body {
     height: 44vh;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.66667vw;
-    font-size: 2.963vh;
     overflow-y: auto;
     overflow-x: hidden;
     padding-left: 0.2605vw;
@@ -202,7 +200,7 @@ ul hr {
 /*____________________________________________________________________________________________________________________*/
 ::-webkit-scrollbar {
     width: 0.78125vw;
-    margin-left: 5vw;
+    margin-left: 6vw;
 }
 
 ::-webkit-scrollbar-track {
@@ -238,15 +236,15 @@ ul hr {
 
 .Main-Dish{
     width: 2.05vw;
-    height:2.7vh;
+    height: 2.7vh;
 }
 
 .Salad{
     width: 2.0833vw;
-    height:4.167vh;
+    height: 4.167vh;
 }
 
-.pastryI{
+.Pastry{
     width: 2.34375vw;
     height: 3.24075vh;
 }
@@ -619,11 +617,44 @@ a:link, a:visited {
     width: 21vw;
     height: 3vh;
     margin: auto;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vh;
+    font-family: 'Frank Ruhl Libre', serif;
     font-size: 1.25vw;
     font-weight: 400;
     line-height: 1vh;
     text-align: left;
     color: #F2E3B3;
+}
+
+.item{
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 1.5vw;
+    padding-left: 0.2605vw;
+    margin-left: 1.5vw;
+    cursor: pointer;
+}
+
+.item a{
+    color: black;
+    display: block;
+    line-height: 3.7vh;
+}
+
+.item a:hover{
+    background-color: #F2B705;
+    border-radius: 2.7vh;
+    width: 10vw;
+}
+
+hr {
+    border: 0.104167vw solid black;
+    width: 9vw;
+}
+
+.ulBoard {
+    position: absolute;
+    top: 19vh;
+    height: 45vh;
+    font-size: 1.66667vw;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
